[package]
name = "token_pr"
version = "0.1.0"
description = "prototyping build"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_pr"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["anchor-debug"]}
anchor-spl = "0.30.1"
